# frida-python

./: .gitignore  MANIFEST.in  README.md  meson.build  setup.py
frida/: core.py  meson.build
frida/_frida/: extension.c
frida/frida_bindgen/: cli.py  codegen.py  customization.py  loader.py
frida/frida_bindgen/assets/: codegen_gobject_methods.c
frida/frida_bindgen_core/: __init__.py  loader.py  model.py  naming.py
tests/: run_bindgen.sh
